<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large.Inverse"
        android:text="@string/title"
        android:id="@+id/textView"
        android:gravity="center"
        android:padding="@dimen/title_padding"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:orientation="vertical"
        android:paddingLeft="@dimen/button_list_padding"
        android:paddingRight="@dimen/button_list_padding"
        android:paddingBottom="@dimen/button_list_padding"
        android:layout_below="@+id/textView">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app1_button_text"
            android:id="@+id/button"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:onClick="onButtonClick" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app2_button_text"
            android:id="@+id/button2"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:onClick="onButtonClick" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app3_button_text"
            android:id="@+id/button3"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:onClick="onButtonClick" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app4_button_text"
            android:id="@+id/button4"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:onClick="onButtonClick" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app5_button_text"
            android:id="@+id/button5"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:onClick="onButtonClick" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app6_button_text"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium.Inverse"
            android:id="@+id/button6"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:onClick="onButtonClick"
            android:backgroundTint="@android:color/holo_blue_light" />
    </LinearLayout>
</RelativeLayout>